[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-code-assistant"
version = "0.1.0"
description = "AI-powered coding assistant that understands YOUR codebase"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["ai", "code-assistant", "llm", "codebase-search", "openai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "openai>=1.0.0",
    "tiktoken>=0.5.0",
    "chromadb>=0.4.0",
    "gitpython>=3.1.0",
    "rich>=13.0.0",
]

[project.urls]
Homepage = "https://github.com/my-ai-stack/ai-code-assistant"
Repository = "https://github.com/my-ai-stack/ai-code-assistant"
